--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
