--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/shaisle/Do-et-1#readme",
   "dependencies": {
     "babel": "^6.23.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "react": "^16.13.1",
