--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "request": "^2.88.2"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
