--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/shaisle/Do-et-1#readme",
   "dependencies": {
     "babel": "^6.23.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
