--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "react": "^16.13.1",
