with oAuth token

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 WEATHER_APIKEY='af16e3b5359936c51ae01288bb6d39f4'
+GAPI_CLIENT_ID='832790293584-mhq1a58egpt895i5ngi77kvtmfgddesc.apps.googleusercontent.com'
