--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
